Added code files
Removed auto generated files and added the source code

--- a/index.html
+++ b/index.html
@@ -1,79 +1,289 @@
+
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Binaryclock : Google I/O 2014 Binary clock" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Binaryclock</title>
-  </head>
-
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta charset="utf-8">
+    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,target-densitydpi=160,minimal-ui" name="viewport">
+    <meta http-equiv="cleartype" content="on">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="keywords" content="event, google, i/o, programming, android, chrome, developers, moscone, san francisco">
+    <meta property="og:title" content="Google I/O 2014">
+    <meta property="og:description" content="Google I/O 2014 brings developers together for an immersive, two-day experience focused on exploring the next generation of technology. Join us online or in person June 25-26, 2014.">
+    <meta property="og:image" content="https://www.google.comhttps://www.google.com/events/io/images/io.png">
+    <title>Google I/O 2014</title>
+    <link href="stylesheets/site.css" rel="stylesheet">
+    <script src="https://www.google.com/events/io/js/vendor/modernizr/modernizr.js"></script>
+    </head>
   <body>
+    <div class="wrapper">
+      <section class="section -countdown">
+        <div class="row -full text-center">
+          <div class="col -width-whole">
+            <!-- Binary-coded decimal countdown to I/O clock -->
+            <div class="binary -clock js-binary-clock">
+              <!-- Days -->
+              <div class="binary__value -days js-days">
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-3 -first js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/vivek1729/BinaryClock">View on GitHub</a>
+                  <div class="binary__unit -power-of-2 -first js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-          <h1 id="project_title">Binaryclock</h1>
-          <h2 id="project_tagline">Google I/O 2014 Binary clock</h2>
+                  <div class="binary__unit -power-of-1 -first js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/vivek1729/BinaryClock/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/vivek1729/BinaryClock/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+                  <div class="binary__unit -power-of-0 -first js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-3 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+                  <div class="binary__unit -power-of-2 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+                  <div class="binary__unit -power-of-1 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+                  <div class="binary__unit -power-of-0 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+              <!-- Hours -->
+              <div class="binary__value -hours js-hours">
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-1 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+                  <div class="binary__unit -power-of-0 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-3 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+                  <div class="binary__unit -power-of-2 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+                  <div class="binary__unit -power-of-1 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+                  <div class="binary__unit -power-of-0 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+              <!-- Minutes -->
+              <div class="binary__value -minutes js-minutes">
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-2 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+                  <div class="binary__unit -power-of-1 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-0 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-3 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-2 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-1 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-0 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Seconds -->
+              <div class="binary__value -seconds js-seconds">
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-2 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-1 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-0 js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="binary__decimal js-binary-column">
+                  <div class="binary__unit -power-of-3 -last js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-2 -last js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-1 -last js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+
+                  <div class="binary__unit -power-of-0 -last js-binary-unit">
+                    <div class="circle js-circle">
+                      <div class="before"></div>
+                      <div class="after"></div>
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Binaryclock maintained by <a href="https://github.com/vivek1729">vivek1729</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+    <script src="javascripts/libs.min.js"></script>
+    <script src="javascripts/site.min.js"></script>
+    <script>
+      io.init('home');
+    </script>
   </body>
 </html>
+
